--- a/Day0426_Network/.project
+++ b/Day0426_Network/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Day0425_NetWork</name>
+	<name>Day0426_Network</name>
 	<comment></comment>
 	<projects>
 	</projects>
