--- a/Day0511_MemberDao/.project
+++ b/Day0511_MemberDao/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Day0510_DAO</name>
+	<name>Day0511_MemberDao</name>
 	<comment></comment>
 	<projects>
 	</projects>
